@@ -1,0 +1,12 @@
+# deprecated desktop keys
+BinaryPattern
+Encoding
+Extensions
+FilePattern
+MapNotify
+MiniIcon
+Protocols
+SortOrder
+SwallowExec
+SwallowTitle
+TerminalOptions
