@@ -1,0 +1,10 @@
+# KDE uses some additional keys that should start with X-KDE but don't for
+# historical reasons.  
+Dev
+DocPath
+FSType
+InitialPreference
+MountPoint
+ReadOnly
+ServiceTypes
+UnmountIcon
