@@ -1,0 +1,27 @@
+# from http://standards.freedesktop.org/desktop-entry-spec/1.1/ar01s05.html
+# list of Recognized desktop entry keys
+# please alpha sort
+#
+# do not delete entry but move to deprecated-desktop-keys
+Actions
+Categories
+Comment
+DBusActivatable
+Exec
+GenericName
+Hidden
+Icon
+Keywords
+MimeType
+Name
+NoDisplay
+NotShowIn
+OnlyShowIn
+Path
+StartupNotify
+StartupWMClass
+Terminal
+TryExec
+Type
+URL
+Version
